[gd_scene load_steps=10 format=3 uid="uid://bu7m5bwxsutry"]

[ext_resource type="Script" uid="uid://cus2ot3gpv2vk" path="res://scripts/levels/level_1/level_1.gd" id="1_fngju"]
[ext_resource type="PackedScene" uid="uid://be7o78vygm7xu" path="res://scenes/gobbo.tscn" id="2_5o1mp"]
[ext_resource type="PackedScene" uid="uid://bad3txjnon78j" path="res://scenes/levels/level_1/truffroot_chunk.tscn" id="3_5o1mp"]
[ext_resource type="Script" uid="uid://o305bh55cxyn" path="res://scripts/levels/level_1/door.gd" id="3_7uxs1"]
[ext_resource type="PackedScene" uid="uid://cio3ou8hj73vv" path="res://scenes/truffie.tscn" id="4_spwf2"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ig7tw"]
normal = Vector2(0, -7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spwf2"]
size = Vector2(256, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7uxs1"]
size = Vector2(58, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2h75"]
size = Vector2(951.714, 67.7307)

[node name="Level1" type="Node2D"]
script = ExtResource("1_fngju")

[node name="Gobbo" parent="." instance=ExtResource("2_5o1mp")]
position = Vector2(200, 544)

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(576, 576)
shape = SubResource("WorldBoundaryShape2D_ig7tw")

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(1168, 264)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
shape = SubResource("RectangleShape2D_spwf2")

[node name="Door" type="Area2D" parent="Platform"]
position = Vector2(-45, -88)
script = ExtResource("3_7uxs1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/Door"]
shape = SubResource("RectangleShape2D_7uxs1")

[node name="HighTruffieNodes" type="Node2D" parent="."]

[node name="TruffrootBridge" type="StaticBody2D" parent="HighTruffieNodes"]
position = Vector2(799, 429)
rotation = 2.8798

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighTruffieNodes/TruffrootBridge"]
rotation = -0.15708
shape = SubResource("RectangleShape2D_g2h75")

[node name="LowTruffieNodes" type="Node2D" parent="."]

[node name="TruffrootChunk1" parent="LowTruffieNodes" instance=ExtResource("3_5o1mp")]
position = Vector2(417, 515)

[node name="TruffrootChunk2" parent="LowTruffieNodes" instance=ExtResource("3_5o1mp")]
position = Vector2(546, 457)
initial_fall_delay = 2.0

[node name="TruffrootChunk3" parent="LowTruffieNodes" instance=ExtResource("3_5o1mp")]
position = Vector2(679, 418)
initial_fall_delay = 2.5

[node name="TruffrootChunk4" parent="LowTruffieNodes" instance=ExtResource("3_5o1mp")]
position = Vector2(823, 364)
initial_fall_delay = 3.0

[node name="TruffrootChunk5" parent="LowTruffieNodes" instance=ExtResource("3_5o1mp")]
position = Vector2(964, 308)
initial_fall_delay = 3.5

[node name="Truffie" parent="." instance=ExtResource("4_spwf2")]
position = Vector2(312, 560)

[node name="Truffie2" parent="." instance=ExtResource("4_spwf2")]
position = Vector2(96, 560)

[node name="TruffieMeter" type="ProgressBar" parent="."]
offset_left = 16.0
offset_top = 472.0
offset_right = 51.0
offset_bottom = 634.0
max_value = 50.0
value = 20.0
fill_mode = 3
show_percentage = false
